--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,22 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build game (make)",
+            "label": "Build (make)",
             "type": "shell",
             "command": "make",
+            "args": [],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "windows": {
+                "command": "C:/msys64/usr/bin/make.exe",
+                "options": {
+                    "cwd": "${workspaceFolder}",
+                    "env": {
+                        "PATH": "C:/msys64/mingw64/bin;C:/msys64/usr/bin;${env:PATH}"
+                    }
+                }
+            },
             "group": {
                 "kind": "build",
                 "isDefault": true
